--- a/ReactApp/src/Css/Static.css
+++ b/ReactApp/src/Css/Static.css
@@ -127,3 +127,83 @@
 .ClearButton:hover{
     background-color: #6f00ff;
 }
+
+.TicTacToe{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.Square{
+    margin: 2px;
+    background-color: #00000040;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+}
+
+.Cross, .Circle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* transition: all 0.3s; */
+    animation: loadMarker 0.3s ease-in-out;
+}
+
+@keyframes loadMarker{
+    from{
+        width: 0%;
+        height: 0%;
+    }
+    to{
+        width: 100%;
+        height: 100%;
+    }
+    
+}
+
+.Cross::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 100%;
+    background-color: #fff;
+    transform: rotate(45deg);
+    border-radius: 10px;
+    box-shadow: 0 0 20px 4px #ff00eab4;
+
+}
+
+.Cross::after{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 100%;
+    background-color: #fff;
+    transform: rotate(-45deg);
+    border-radius: 10px;
+    box-shadow: 0 0 20px 4px #ff00eab4;
+}
+
+.Circle::after{
+    content: '';
+    width: 65%;
+    height: 65%;
+    border-radius: 50%;
+    border: 10px solid #fff;
+    box-shadow: 0 0 20px 4px #ff00eab4;
+}
+
+
